# tsexplain

./: CMakeLists.txt  README.md
config/: agen.py  covid-daily.yaml  covid-total.yaml  liquor.yaml  sp500.yaml
dataset/synthetic/: linear-0-meta.txt  linear-1-meta.txt  linear-10-meta.txt  linear-11-meta.txt  linear-12-meta.txt  linear-13-meta.txt  linear-14-meta.txt  linear-15-meta.txt  linear-16-meta.txt  linear-17-meta.txt  linear-18-meta.txt  linear-19-meta.txt  linear-2-meta.txt  linear-20-0.tsv  linear-20-1.tsv  linear-20-10.tsv  linear-20-11.tsv  linear-20-12.tsv  linear-20-13.tsv  linear-20-14.tsv  linear-20-15.tsv  linear-20-16.tsv  linear-20-17.tsv  linear-20-18.tsv  linear-20-19.tsv  linear-20-2.tsv  linear-20-3.tsv  linear-20-4.tsv  linear-20-5.tsv  linear-20-6.tsv  linear-20-7.tsv  linear-20-8.tsv  linear-20-9.tsv  linear-25-0.tsv  linear-25-1.tsv  linear-25-10.tsv  linear-25-11.tsv  linear-25-12.tsv  linear-25-13.tsv  linear-25-14.tsv  (+121 more)
demo/: _output.json  _segments.txt  demo.py  demo.spec  find_best_k.py
include/: tsexplain.h
script /: RunExp.py  RunSynExp.py  demo.py  plot.py
src/: README.md  cascading.cpp  data_source.cpp  fixk_search.cpp  main.cpp  metric.cpp  regression.cpp  spec.cpp  trendline.cpp  visual_segment.cpp
